Radiomaster TX16S Frsky R9 PXX2 support

--- a/radio/src/CMakeLists.txt
+++ b/radio/src/CMakeLists.txt
@@ -52,6 +52,7 @@ option(MODULE_PROTOCOL_FCC "Add support for FCC modules" ON)
 option(MODULE_PROTOCOL_LBT "Add support for EU/LBT modules" ON)
 option(MODULE_PROTOCOL_FLEX "Add support for non certified FLEX modules" OFF)
 option(MODULE_PROTOCOL_D8 "Add support for D8 modules" ON)
+option(EXTERNAL_MODULE_PXX2 "Add support for FrSky ACCESS external modules" OFF)
 option(FRSKY_RELEASE "Used to build FrSky released firmware" OFF)
 option(TBS_RELEASE "Used to build TBS released firmware" OFF)
 option(ALLOW_TRAINER_MULTI "Allow multi trainer" OFF)
