--- a/radio/src/targets/horus/CMakeLists.txt
+++ b/radio/src/targets/horus/CMakeLists.txt
@@ -62,10 +62,16 @@ if (PCB STREQUAL X10)
     option(INTERNAL_MODULE_MULTI "Support for MULTI internal module" ON)
     option(BLUETOOTH "Support for bluetooth module" OFF)
     option(INTERNAL_GPS "Support for internal ublox GPS" OFF)
+    option(EXTERNAL_MODULE_PXX2 "Support for internal ublox GPS" OFF)
     set(HARDWARE_TOUCH YES)
     set(USB_CHARGER YES)
     set(DEFAULT_THEME "DARKBLUE")
-    set(AUX_SERIAL ON)
+    if (EXTERNAL_MODULE_PXX2)
+	set(PXX2 ON)
+	add_definitions(-DEXTERNAL_MODULE_PXX2)
+    else()
+	set(AUX_SERIAL ON)
+    endif()
     if (NOT BLUETOOTH AND NOT INTERNAL_GPS)
       set(AUX2_SERIAL ON)
     endif()
